--- a/css/main.css
+++ b/css/main.css
@@ -639,7 +639,7 @@ header {
 	
 }
 header.opaque {
-	background: black;
+	background: #10455B;
 	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
