--- a/css/main.css
+++ b/css/main.css
@@ -971,7 +971,7 @@ ul#nav li.current a:after {
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
-	min-height: 630px;
+	height:100%;
 	width: 100%;
 	text-align: left;
 	position: relative;
