--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ body {
 }
 
 body {
-	background: #10455B;
+	background: #F9F3ED url(../images/wave_Footer.png) no-repeat center;r;
 	font: 16px/30px "merriweather-regular", serif;
 	font-weight: normal;
 	color: #575859;
