--- a/css/main.css
+++ b/css/main.css
@@ -361,6 +361,22 @@ background: #10455B url(../images/wave.png) no-repeat center;
 	margin: 120px 0 54px;
 }
 
+#homeheader h1{
+	font: 49px/1.3 "raleway-bold", sans-serif;
+	letter-spacing: -1px;
+	padding-bottom: 24px;
+	color: white;
+	text-shadow: 0 1px 20px rgba(0, 0, 0, 0.6);
+	position: relative;    	
+}
+
+#homeheader span{
+		font: 49px/1.3 "raleway-bold", sans-serif;
+		display: inline-block;
+		border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+	}
+
+
 
 /*Start page end */
 
