--- a/css/main.css
+++ b/css/main.css
@@ -1174,8 +1174,8 @@ ul#nav li.current a:after {
 	font: 49px/1.3 "raleway-bold", sans-serif;
 	letter-spacing: -1px;
 	padding-bottom: 24px;
-	color: white;
-	text-shadow: 0 1px 20px rgba(0, 0, 0, 0.6);
+	color: #10455b;
+	text-shadow: 0 1px 20px rgba(255, 255, 255, 0.6);
 	position: relative;    
 
 	/* for css animations */
@@ -1198,7 +1198,7 @@ ul#nav li.current a:after {
 
 #hero-slider .slides .flex-caption h3 {
 	font: 18px/1.9 "merriweather-light", sans-serif;
-	color: rgba(255, 255, 255, 0.7);
+	color: rgba(0, 0, 0, 0.7);
 	text-shadow: 0 1px 15px rgba(0, 0, 0, 0.5);
 	width: 85%;
 	margin-top: 24px;    
