--- a/css/main.css
+++ b/css/main.css
@@ -2296,7 +2296,7 @@ footer .info {
 }
 
 footer .footer-logo {
-	width: 190px;
+	width: 500px;
 	height: 60px;
 	background: url("../images/Logo&Name.png") no-repeat center;
 	background-size: 190px 60px;
@@ -2304,7 +2304,20 @@ footer .footer-logo {
 	display: block;
 	filter: alpha(opacity=30);
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=10)";
-	opacity: 0.1;
+	opacity: 0.6;
+	zoom: 1;
+}
+
+footer .mii-logo {
+	width: 190px;
+	height: 90px;
+	background: url("../images/mii.png") no-repeat center;
+	background-size: 190px 90px;
+	margin: 0 auto 21px;
+	display: block;
+	filter: alpha(opacity=30);
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=10)";
+	opacity: 0.6;
 	zoom: 1;
 }
 
