--- a/css/main.css
+++ b/css/main.css
@@ -375,10 +375,22 @@ background: #10455B url(../images/wave.png) no-repeat center;
 		display: inline-block;
 		border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 	}
-
-
-
 /*Start page end */
+
+/* Start page of ABout Us
+*/
+
+#AboutHome{
+	background: #10455B url(../images/Wave-About-us1.png) no-repeat center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	min-height: 630px;
+	width: 100%;
+	text-align: left;
+	position: relative;
+}
+
 
 /*
 /* 03. =Preloader
@@ -1145,7 +1157,7 @@ ul#nav li.current a:after {
 /* =================================================================== */
 
 #hero {
-	background: #ffaf20;
+	background: #f9f3ed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -1998,13 +2010,74 @@ ul#nav li.current a:after {
 	}
 
 }
+/*
+ Testimonial
+ */
+ 
+ #testy {
+	background: #FFAF20;
+	padding-top: 120px;
+	padding-bottom: 138px;
+	overflow: hidden;
+	border-bottom: 1px solid #15191d;
+}
+/* contact form */
+#testy form {
+	margin-top: 12px;
+	margin-bottom: 30px;
+}
 
+#testy form div {
+	position: relative;
+}
+
+#testy form div:before,
+#testy form div:after {
+	content: "";
+	display: table;
+}
+
+#testy form div:after {
+	clear: both;
+}
+
+#testy form div label {
+	font: 11px/24px "raleway-bold", sans-serif;
+	position: absolute;
+	bottom: 3px;
+	right: 6px;
+	border-radius: 3px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	padding: 0 20px;
+	color: #e64e04;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+#testy textarea,
+#testy select {
+	margin-bottom: 45px;
+	width: 100%;
+}
+
+#testy button.submitform {
+	font: 15px/30px "raleway-heavy", sans-serif;	
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	height: 60px;
+	display: inline-block;
+	padding: 15px 30px;
+	width: 100%;
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
+	
 /**
 /* 12. =contact
 /* =================================================================== */
 
 #contact {
-	background: #302824;
+	background: #F9F3ED;
 	padding-top: 120px;
 	padding-bottom: 138px;
 	overflow: hidden;
@@ -2075,56 +2148,7 @@ ul#nav li.current a:after {
 
 }
 
-/* contact form */
-#contact form {
-	margin-top: 12px;
-	margin-bottom: 30px;
-}
 
-#contact form div {
-	position: relative;
-}
-
-#contact form div:before,
-#contact form div:after {
-	content: "";
-	display: table;
-}
-
-#contact form div:after {
-	clear: both;
-}
-
-#contact form div label {
-	font: 11px/24px "raleway-bold", sans-serif;
-	position: absolute;
-	bottom: 3px;
-	right: 6px;
-	border-radius: 3px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	padding: 0 20px;
-	color: #e64e04;
-}
-
-input[type="text"],
-input[type="password"],
-input[type="email"],
-#contact textarea,
-#contact select {
-	margin-bottom: 45px;
-	width: 100%;
-}
-
-#contact button.submitform {
-	font: 15px/30px "raleway-heavy", sans-serif;	
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	height: 60px;
-	display: inline-block;
-	padding: 15px 30px;
-	width: 100%;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
 }
 
 #message-warning,
