--- a/css/main.css
+++ b/css/main.css
@@ -394,16 +394,37 @@ background: #10455B url(../images/wave.png) no-repeat center;
 #Latter
 {
   background:#F9F3ED;  
+  width:100%;
+  height:100%;
 }
  
 #Latter h1{
-	align:center;
-	color:red;
-	 
+	position:absolute;
+	left: 50%;
+	color:black;
+	transform: translateX(-155%) translateY(50%);
+	font-family:Times, Times New Roman, serif;	
+	line-height:1.6;
+	font-size:50px;
  }
  
  #Latter h3{
-	 color:blue;
+	position:absolute;
+	left: 50%;
+	color:#5A5151;
+	transform: translateX(-50%) translateY(35%);
+	font-family:Courier;
+	line-height:1.6;
+ }
+ 
+ #Latter h2
+ {
+	 position:absolute;
+	left: 50%;
+	color:#5A5151;
+	transform: translateX(-290%) translateY(1400%);
+	font-family:Brush Script MT, Brush Script Std, cursive;
+	line-height:1.6;
  }
 
 /*
@@ -2089,13 +2110,12 @@ input[type="email"],
 /**
 /* 12. =contact
 /* =================================================================== */
-
 #contact{
 	background: #F9F3ED;
 	padding-top: 120px;
 	padding-bottom: 138px;
 	overflow: hidden;
-	border-bottom: 1px solid #15191d;
+	border-bottom: 1px solid #15191d;	
 }
 
 #contact h3 {
