--- a/css/main.css
+++ b/css/main.css
@@ -2527,7 +2527,7 @@ footer .social-links li:first-child {
 }
 
 #myBtn:hover {
-  background:#FFAF20 url(../images/slide-up-52.png) no-repeat center;;
+  background:transparent url(../images/slide-up-52.png) no-repeat center;;
 }
 
 /*scroll Up Btn End*/
