--- a/css/main.css
+++ b/css/main.css
@@ -367,7 +367,7 @@ img.pull-left {
 	padding-bottom: 24px;
 	color: white;
 	text-shadow: 0 1px 20px rgba(0, 0, 0, 0.6);
-	position: relative;    	
+	position: relative;
 }
 
 #homeheader span{
@@ -380,6 +380,9 @@ img.pull-left {
 
 /* Start page of ABout Us
 */
+.about-nav {
+	color: #000;
+}
 
 #AboutHome{
 	background: #10455B url(../images/Wave-About-us2.png) no-repeat center;
@@ -394,21 +397,21 @@ img.pull-left {
 
 #Latter
 {
-  background:#F9F3ED;  
+  background:#F9F3ED;
   width:100%;
   height:100%;
 }
- 
+
 #Latter h1{
 	position:absolute;
 	left: 53%;
 	color:black;
 	transform: translateX(-155%) translateY(20%);
-	font: 49px/1.3 "raleway-bold", sans-serif;	
+	font: 49px/1.3 "raleway-bold", sans-serif;
 	line-height:1.6;
 	font-size:50px;
  }
- 
+
  #Latter h3{
 	position:absolute;
 	left: 50%;
@@ -417,7 +420,7 @@ img.pull-left {
 	font-family:Courier;
 	line-height:1.6;
  }
- 
+
  #Latter h2
  {
 	 position:absolute;
@@ -1224,7 +1227,7 @@ ul#nav li.current a:after {
 	padding-bottom: 24px;
 	color: #10455b;
 	text-shadow: 0 1px 20px rgba(255, 255, 255, 0.6);
-	position: relative;    
+	position: relative;
 
 	/* for css animations */
 	filter: alpha(opacity=0);
@@ -1249,7 +1252,7 @@ ul#nav li.current a:after {
 	color: rgba(0, 0, 0, 0.7);
 	text-shadow: 0 1px 15px rgba(0, 0, 0, 0.5);
 	width: 85%;
-	margin-top: 24px;    
+	margin-top: 24px;
 
 	/* for css animations */
 	filter: alpha(opacity=0);
@@ -1279,7 +1282,7 @@ ul#nav li.current a:after {
 	zoom: 1;
 }
 
-/* media queries:  
+/* media queries:
 /* #hero / .hero-contert / #hero-slider */
 
 @media only screen and (max-width:1200px) {
@@ -2049,7 +2052,7 @@ ul#nav li.current a:after {
 /*
  Testimonial
  */
- 
+
  #testy {
 	background: #f9f3ed;
 	padding-top: 120px;
@@ -2099,7 +2102,7 @@ input[type="email"],
 }
 
 #testy button.submitform {
-	font: 15px/30px "raleway-heavy", sans-serif;	
+	font: 15px/30px "raleway-heavy", sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	height: 60px;
@@ -2107,7 +2110,7 @@ input[type="email"],
 	padding: 15px 30px;
 	width: 100%;
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
-	
+
 /**
 /* 12. =contact
 /* =================================================================== */
@@ -2116,7 +2119,7 @@ input[type="email"],
 	padding-top: 120px;
 	padding-bottom: 138px;
 	overflow: hidden;
-	border-bottom: 1px solid #15191d;	
+	border-bottom: 1px solid #15191d;
 }
 
 #contact h3 {
@@ -2521,7 +2524,7 @@ footer .social-links li:first-child {
 	height:30px;
 	border-radius:100%;
 	background:white url(../images/slide-up-52.png) no-repeat center;
-	box-shadow:0 0 10px rgba(0,0,0,0.25);	
+	box-shadow:0 0 10px rgba(0,0,0,0.25);
 	color:black;
 	outline:none;
 }
