--- a/css/main.css
+++ b/css/main.css
@@ -2110,35 +2110,15 @@ input[type="email"],
 	padding: 15px 30px;
 	width: 100%;
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
+}
 
 /**
 /* 12. =contact
 /* =================================================================== */
-#contact{
-	background: #10455B url(../images/wave_Footer.png) no-repeat center;
+#contact {
+	background: #F9F3ED;
 	padding-top: 120px;
-	padding-bottom: 138px;
-	overflow: hidden;
-	border-bottom: 1px solid #15191d;
 }
-
-#contact h3 {
-	font: 18px/36px "raleway-heavy", sans-serif;
-	color: #fdc501;
-	padding: 0;
-	margin-bottom: 6px;
-}
-
-#contact .left {
-	padding-right: 35px;
-}
-
-#contact .right {
-	padding-left: 35px;
-	position: relative;
-	top: -6px;
-}
-
 /* media queries:
 /* #contact / .left .right */
 
