--- a/css/main.css
+++ b/css/main.css
@@ -1662,11 +1662,13 @@ ul#nav li.current a:after {
 
 #team-wrapper {
 	margin: 0 auto;
+	width: 100%;
 }
 
 #team-wrapper .member {
 	margin-bottom: 24px;
 	margin-top: 12px;
+	width: 33.33%;
 }
 
 #team-wrapper .member h3 {
