--- a/css/main.css
+++ b/css/main.css
@@ -417,7 +417,7 @@ img.pull-left {
 	left: 50%;
 	color:#5A5151;
 	transform: translateX(-50%) translateY(25%);
-	font-family:Courier;
+	font-family:Calibri;
 	line-height:1.6;
  }
 
@@ -426,7 +426,7 @@ img.pull-left {
 	 position:absolute;
 	left: 50%;
 	color:#5A5151;
-	transform: translateX(-290%) translateY(1550%);
+	transform: translateX(-290%) translateY(1150%);
 	font-family:Brush Script MT, Brush Script Std, cursive;
 	line-height:1.6;
  }
@@ -2366,7 +2366,7 @@ footer .footer-logo {
 	display: block;
 	filter: alpha(opacity=30);
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=10)";
-	opacity: 0.6;
+	opacity: 1.0;
 	zoom: 1;
 }
 
