--- a/css/main.css
+++ b/css/main.css
@@ -407,30 +407,38 @@ header.opaque .about-nav {
 }
 
 #Latter h1{
-	position:absolute;
-	left: 53%;
+	position:relative;
+	left: 120px;
+	margin-left:10%;
+	margin-right:30%;
 	color:black;
-	transform: translateX(-155%) translateY(20%);
+	/*transform: translateX(-155%) translateY(20%);*/
 	font: 49px/1.3 "raleway-bold", sans-serif;
 	line-height:1.6;
 	font-size:50px;
  }
 
  #Latter h3{
-	position:absolute;
-	left: 50%;
+	position:relative;
+	left: 120px;
+	margin-right:30%;
+	margin-left:10%;
 	color:#5A5151;
-	transform: translateX(-50%) translateY(25%);
+	/*transform: translateX(-50%) translateY(25%);*/
 	font-family:Calibri;
 	line-height:1.6;
  }
 
  #Latter h2
  {
-	 position:absolute;
-	left: 50%;
+	position:relative;
+	left:120px;
+	margin-right:30%;
+	margin-left:10%;
+	text-align: justify;
+	text-justify: inter-word;
 	color:#5A5151;
-	transform: translateX(-290%) translateY(1150%);
+	/*transform: translateX(-290%) translateY(1150%);*/
 	font-family:Brush Script MT, Brush Script Std, cursive;
 	line-height:1.6;
  }
@@ -2189,9 +2197,6 @@ input[type="email"],
 	#contact .right {
 		padding: 0;
 	}
-
-}
-
 
 }
 
