--- a/css/main.css
+++ b/css/main.css
@@ -1436,6 +1436,10 @@ ul#nav li.current a:after {
 	#hero-slider .slides .flex-caption h1 {
 		font: 30px/1.3 "raleway-bold", sans-serif;
 	}
+	
+	#home{
+		max-height:auto;
+	}
 
 }
 
