--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
 /*  11. =testimonials
 /*  12. =contact
 /*  13. =footer
-/*
+/*	14. =Video Testimonial
 /* =================================================================== */
 
 /**
@@ -41,7 +41,7 @@ body {
 }
 
 body {
-	background: #10455B no-repeat center;
+	background: #10455B no-repeat center;  /*from here you can change footer color*/
 	font: 16px/30px "merriweather-regular", serif;
 	font-weight: normal;
 	color: #575859;
@@ -359,6 +359,7 @@ img.pull-left {
 /*
 /* Start page You tube video and all
 /*===================================================================*/
+
 #home{
 	background: #10455B url(../images/wave.png) no-repeat center;
 	-webkit-background-size: cover;
@@ -675,7 +676,7 @@ margin-right: auto;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background: #F9F3ED;
+	background: white;
 	z-index: 9999999;
 	height: 100%;
 	width: 100%;
@@ -694,7 +695,7 @@ margin-right: auto;
 	height: 50px;
 	margin-left: -25px;
 	margin-top: -25px;
-	background-color: #fdc501;
+	background-color: #ffaf20;
 	-webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
 	animation: sk-rotateplane 1.2s infinite ease-in-out;
 }
@@ -2372,7 +2373,7 @@ ul#nav li.current a:after {
 
 }
 /*
- Testimonial
+ Contact Form
  */
 
  #testy {
@@ -2633,9 +2634,116 @@ input[type="email"],
 
 }
 
+/**
+/* 13. =Swiper for Review
+/* =================================================================== */
+
+
+#reviews {
+	background: #f9f3ed;
+	padding-top: 90px;
+	padding-bottom: 112px;
+	position: relative;
+	min-height: 198px;
+	width: 100%;
+	overflow: hidden;
+	text-align: center;
+}
+
+.swiper-container {
+      width: 100%;
+      height: 350px;
+      margin-left: auto;
+      margin-right: auto;
+	 -webkit-box-shadow: 0px 5px 30px 0px rgba(167, 167, 167, 0.16);
+	 -moz-box-shadow: 0px 5px 30px 0px rgba(167, 167, 167, 0.16);
+	  box-shadow: 0px 5px 30px 0px rgba(167, 167, 167, 0.16);
+	 -webkit-transition: all 0.3s ease-out 0s;
+	 -moz-transition: all 0.3s ease-out 0s;
+	 -ms-transition: all 0.3s ease-out 0s;
+	 -o-transition: all 0.3s ease-out 0s;
+	 transition: all 0.3s ease-out 0s;
+	 padding: 50px 30px;
+	 border: 2px solid transparent;
+	 border-radius: 15px;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #f9f3ed;
+
+     
+	}
+	
+	.swiper-slide img{
+		width:350px;
+		height:350px;
+		float:left;
+	}
+	
+	#Testi_Video{
+		width:350px;
+		height:350px;
+		float:left;
+	}
+	
+	.swiper-slide 
+	quote {
+    position: relative;
+    z-index: 600;
+    padding: 40px 0 40px 180px;
+    margin: 0;
+
+    font-size: 20px;
+    font-style: italic;
+    line-height: 1.4 !important;
+    font-family: Calibri;
+    color: black;
+    }
+	
+    p {
+      position: relative;
+      margin-bottom: 20px;
+	  
+	  &:first-child:before {
+        content: '\201C';
+        color: rgba(255, 255, 255, 0.44);
+        font-size: 7.5em;
+        font-weight: 700;
+        opacity: 1;
+        position: absolute;
+        top: -.4em;
+        left: -.2em;    
+        text-shadow: none;
+        z-index: -10;
+      }
+    }
+	
+	cite {
+      display: block;
+      font-size: 14px;
+	  float:left;
+	  margin-left:35px;
+      
+      span {
+        font-size: 16px;
+        font-style: normal;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+      }
+    }
+	
+	.swiper-button-next{
+		color:white;
+	}
+	
+	
+
+/*Swiper for review ends here */
 
 /**
-/* 13. =footer
+/* 14. =footer
 /* =================================================================== */
 
 footer {
@@ -2889,6 +2997,8 @@ footer .social-links li:first-child {
 }
 
 /*scroll Up Btn End*/
+
+/*Donwload Btn for android application*/
 #android {
 	position: relative;
 }
@@ -2924,3 +3034,5 @@ footer .social-links li:first-child {
 	background: #fdc501;
 	color: #000000;
 }
+
+
