--- a/css/main.css
+++ b/css/main.css
@@ -361,10 +361,11 @@ img.pull-left {
 /*===================================================================*/
 
 #home{
-	background: #10455B url(../images/wave.png) no-repeat center;
+	background: #f9f3ed url(../images/Home3.png) no-repeat center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
+	height:800px;
 	min-height: 630px;
 	width: 100%;
 	text-align: left;
@@ -551,6 +552,7 @@ header.opaque .about-nav {
 	color: #fff;
 }
 
+/*AboutHome Screen Started*/
 #AboutHome{
 	background: #10455B url(../images/Wave-About-us2.png) no-repeat center;
 	-webkit-background-size: cover;
@@ -963,6 +965,8 @@ hr {
 	-ms-transform: rotate(0deg);
 	-o-transform: rotate(0deg);
 	transform: rotate(0deg);
+	height:140px;
+	width:140px;
 }
 
 .icon .shape-1 {
@@ -1525,6 +1529,20 @@ ul#nav li.current a:after {
 	zoom: 1;
 }
 
+
+#hero-slider .slides  img {
+	display: block;
+	width: auto;
+	height: 100%;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	margin-right:100px;
+}
+
+
+
+
 #hero-slider .slides .flex-caption h1 span,
 #hero-slider .slides .flex-caption h1 a {
 	display: inline-block;
@@ -1575,6 +1593,16 @@ ul#nav li.current a:after {
 	#hero-slider .slides .flex-caption h1 {
 		font: 43px/1.3 "raleway-bold", sans-serif;
 	}
+	
+	#hero-slider .slides  img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	height:150px;
+	position: relative;
+	bottom: 0;
+	}
+
 
 	#hero-slider .slides .flex-caption h1::after {
 		margin-left: -50px;
