--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,9 @@
 /*  10. =about
 /*  11. =testimonials
 /*  12. =contact
-/*  13. =footer
-/*	14. =Video Testimonial
+/*	13  =Video Slider
+/*  13. =Video Testimonial
+/*	14. =footer
 /* =================================================================== */
 
 /**
@@ -41,7 +42,7 @@ body {
 }
 
 body {
-	background: #10455B no-repeat center;  /*from here you can change footer color*/
+	background: #F9F3ED no-repeat center;  
 	font: 16px/30px "merriweather-regular", serif;
 	font-weight: normal;
 	color: #575859;
@@ -389,6 +390,10 @@ img.pull-left {
 		font: 49px/1.3 "raleway-bold", sans-serif;
 		display: inline-block;
 	}
+	
+	@media only screen and (max-width:768px) {
+		
+	}
 /*Start page end */
 
 
@@ -408,7 +413,7 @@ img.pull-left {
 		top: 0;
 		right: 0;
 	}
-
+	
 	/* mobile-btn and toggle-btn */
 	#nav-wrap > a{
 		border: none;
@@ -654,7 +659,7 @@ margin-right: auto;
 width: 100%;
 font: 44px/1.3 "raleway-bold", sans-serif;
 margin-left: auto;
-margin-right: 50px;	
+margin-right: auto;	
 }	
 	
 }
@@ -2466,6 +2471,7 @@ input[type="email"],
 /* 12. =contact
 /* =================================================================== */
 #contact{
+	position:relative;
 	background: #f9f3ed ;
 	padding-top: 120px;
 	padding-bottom: 138px;
@@ -2663,7 +2669,62 @@ input[type="email"],
 }
 
 /**
-/* 13. =Swiper for Review
+/* 13. =Video Slider
+/* =================================================================== */
+
+ .video-container {
+      width: 100%;
+      height: 100%;
+    }
+
+    .video-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+	  opacity:0.7;
+    }
+	
+	.video-slide:hover {
+		cursor:pointer;
+		opacity:1;
+	}
+	
+	.video-slide img{
+		height:80px;
+	}
+	
+	@media only screen and (max-width:600px) {
+		#video-YT{
+			width:100%;
+			height:auto;
+		}
+	}
+	
+	@media only screen and (max-width:768px) {
+		.video-slide img{
+			width:100%;
+			height:auto;
+		}
+	}
+/*Video Slider Ends Here
+
+
+/**
+/* 14. =Swiper for Review
 /* =================================================================== */
 
 
@@ -2770,8 +2831,9 @@ input[type="email"],
 
 /*Swiper for review ends here */
 
+
 /**
-/* 14. =footer
+/* 15. =footer
 /* =================================================================== */
 
 footer {
@@ -2779,6 +2841,7 @@ footer {
 	padding-bottom: 24px;
 	position: relative;
     color: #FFFFFF;
+	background: #10455b no-repeat center;
 }
 
 footer .content {
@@ -2812,29 +2875,17 @@ footer .info {
 	clear: both;
 }
 
-footer .footer-logo {
-	width: 500px;
-	height: 60px;
-	background: url("../images/Logo&Name.png") no-repeat center;
-	background-size: 190px 60px;
-	margin: 0 auto 21px;
-	display: block;
-	filter: alpha(opacity=30);
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=10)";
-	opacity: 1.0;
-	zoom: 1;
-}
+
 
 footer .mii-logo {
 	width: 190px;
 	height: 90px;
-	background: url("../images/mii.png") no-repeat center;
 	background-size: 190px 90px;
 	margin: 0 auto 21px;
 	display: block;
 	filter: alpha(opacity=30);
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=10)";
-	opacity: 0.6;
+	opacity: 1;
 	zoom: 1;
 }
 
