--- a/css/main.css
+++ b/css/main.css
@@ -362,20 +362,18 @@ img.pull-left {
 /*===================================================================*/
 
 #home{
-	background: #f9f3ed url(../images/Home3.png) no-repeat center;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	background-size: cover;
-	height:800px;
-	min-height: 630px;
-	width: 100%;
-	text-align: left;
-	position: relative;
+	background: #f9f3ed;
+}
+
+#home img{
+	width:100%;
+	height:auto;
 }
 
 #home-slider {
 	margin: 120px 0 54px;
 }
+
 
 #homeheader h1{
 	font: 49px/1.3 "raleway-bold", sans-serif;
@@ -414,6 +412,7 @@ img.pull-left {
 		right: 0;
 	}
 	
+	#
 	/* mobile-btn and toggle-btn */
 	#nav-wrap > a{
 		border: none;
@@ -1652,6 +1651,7 @@ ul#nav li.current a:after {
 	
 	#home{
 		min-height: auto;
+		width:100%;
 	}
 
 }
