--- a/css/main.css
+++ b/css/main.css
@@ -558,7 +558,7 @@ header.opaque .about-nav {
 
 /*AboutHome Screen Started*/
 #AboutHome{
-	background: #10455B url(../images/Wave-About-us2.png) no-repeat center;
+	background: #f9f3ed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -614,6 +614,7 @@ header.opaque .about-nav {
 
 #AboutHome{
 	width:100%;
+	height:auto;
 }
 #Latter{
 width: 100%;
@@ -669,7 +670,6 @@ width: 100%;
 font: 44px/1.3 "raleway-bold", sans-serif;
 margin-left: auto;
 margin-right: auto;	
-
 }
 }
 /*
