--- a/css/main.css
+++ b/css/main.css
@@ -1258,7 +1258,7 @@ ul#nav li a {
 	line-height: 38px;
 	text-decoration: none;
 	text-align: left;
-	color: #FFFFFF;
+	color: #93B8C7;
 	position: relative;
 	-moz-transition: color 0.2s ease-in-out;
 	-o-transition: color 0.2s ease-in-out;
