--- a/css/main.css
+++ b/css/main.css
@@ -1192,7 +1192,7 @@ header .header-social li a:hover {
 
 @media only screen and (max-width:768px) {
 	header {
-		background: transparent;
+		background: #10455b;
 		
 	}
 
